--- a/src/main/resources/templates/authorization-page.html
+++ b/src/main/resources/templates/authorization-page.html
@@ -43,11 +43,11 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="/static/style/style.css" th:href="@{/style/style.css}" />>
   </head>
   <body>
     <div>
-      <link href="./authorization-page.css" rel="stylesheet" />
+      <link rel="stylesheet" type="text/css" href="/static/style/authorization-page.css" th:href="@{/style/authorization-page.css}" />
 
       <div class="authorization-page-container">
         <header data-role="Header" class="authorization-page-header">
