--- a/src/main/resources/templates/authorization-page.html
+++ b/src/main/resources/templates/authorization-page.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 <div>
-    <link rel="stylesheet" type="text/css" href="/static/style/landing-page.css" th:href="@{/style/landing-page.css}" />
+    <link rel="stylesheet" type="text/css" href="/static/style/authorization-page.css" th:href="@{/style/authorization-page.css}" />
     <div class="authorization-page-container">
         <header data-role="Header" class="authorization-page-header">
             <img
