add working css for frontend

--- a/src/main/resources/templates/authorization-page.html
+++ b/src/main/resources/templates/authorization-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Authorization-page - Travel Agency</title>
     <meta property="og:title" content="Authorization-page - Travel Agency" />
