--- a/src/main/resources/templates/item-page.html
+++ b/src/main/resources/templates/item-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Authorization-page - Travel Agency</title>
-    <meta property="og:title" content="Authorization-page - Travel Agency" />
+    <title>Item-page - Travel Agency</title>
+    <meta property="og:title" content="Item-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -47,9 +47,9 @@
   </head>
   <body>
     <div>
-      <link href="/style/authorization-page.css" rel="stylesheet" />
+      <link href="/style/item-page.css" rel="stylesheet" />
 
-      <div class="authorization-page-container">
+      <div class="item-page-container">
         <header data-role="Header" class="header-header">
           <img
             alt="logo"
@@ -84,44 +84,41 @@
             </div>
           </div>
         </header>
-        <div class="authorization-page-container1">
-          <h1 class="authorization-page-text">ВХОД</h1>
-          <span class="authorization-page-text1">
-            <span>Чтобы продолжить покупки</span>
-            <br />
-            <span>зарегистрируйтесь или</span>
-            <br />
-            <span>войдите в уже существующий аккаунт.</span>
+        <div class="item-page-container1">
+          <h1 class="item-page-text">Название Книги</h1>
+          <svg viewBox="0 0 1024 1024" class="item-page-icon">
+            <path
+              d="M884 300l-78 78-160-160 78-78q12-12 30-12t30 12l100 100q12 12 12 30t-12 30zM128 736l472-472 160 160-472 472h-160v-160z"
+            ></path>
+          </svg>
+        </div>
+        <div class="item-page-container2">
+          <div class="item-page-container3">
+            <img
+              src="https://play.teleporthq.io/static/svg/default-img.svg"
+              alt="image"
+              class="item-page-image"
+            />
+          </div>
+          <div class="item-page-container4">
+            <label class="item-page-text1">__ ₽</label>
+            <label class="item-page-text2">в наличии</label>
+            <label class="item-page-text3">__ штук</label>
+            <svg viewBox="0 0 1024 1024" class="item-page-icon2">
+              <path
+                d="M884 300l-78 78-160-160 78-78q12-12 30-12t30 12l100 100q12 12 12 30t-12 30zM128 736l472-472 160 160-472 472h-160v-160z"
+              ></path>
+            </svg>
+          </div>
+        </div>
+        <div class="item-page-container5">
+          <label class="item-page-text4">Категория</label>
+          <label class="item-page-text5">Автор</label>
+          <span class="item-page-text6">
+            Описание книги - это как хорошее произведение искутссва. Если
+            написать сочно, то любой книгу каждый же купит. А вот описывая
+            только скучные факты ничего хорошего не добьёшься.
           </span>
-          <div class="authorization-page-container2">
-            <input
-              type="text"
-              placeholder="Логин"
-              class="authorization-page-input input"
-            />
-          </div>
-          <div class="authorization-page-container3">
-            <input
-              type="text"
-              placeholder="Пароль"
-              class="authorization-page-input1 input"
-            />
-          </div>
-          <div class="button-enter-container button-enter-root-class-name">
-            <button type="button" class="button-enter-button">
-              <span>
-                <span>Войти</span>
-                <br />
-              </span>
-            </button>
-          </div>
-          <div
-            class="button-register-container button-register-root-class-name"
-          >
-            <button type="button" class="button-register-button">
-              Зарегистрироваться
-            </button>
-          </div>
         </div>
         <footer class="footer-footer">
           <span class="footer-text">
