--- a/src/main/resources/static/style/button-enter.css
+++ b/src/main/resources/static/style/button-enter.css
@@ -17,7 +17,17 @@
   background-color: var(--dl-color-primary-100);
 }
 
+
+
 @media(max-width: 479px) {
+  .button-enter-root-class-name1 {
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+  }
+  .button-enter-root-class-name2 {
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+  }
   .button-enter-root-class-name {
     margin-top: 0rem;
     margin-bottom: 0rem;
