--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -74,7 +74,7 @@
 }
 .Subheading {
   font-size: 1.6rem;
-  font-family: Poppins;
+  font-family: Open Sans;
   font-weight: 400;
   text-transform: none;
   text-decoration: none;
@@ -89,14 +89,14 @@
 }
 .Button {
   font-size: 14px;
-  font-family: Poppins;
+  font-family: Open Sans;
   font-weight: 600;
   text-transform: none;
   text-decoration: none;
 }
 .Content {
-  font-size: 16px;
-  font-family: Poppins;
+  font-size: 1rem;
+  font-family: Open Sans;
   font-weight: 400;
   line-height: 1.55;
   text-transform: none;
