--- a/src/main/resources/static/style/item-page.css
+++ b/src/main/resources/static/style/item-page.css
@@ -139,9 +139,9 @@
   border-style: solid;
   border-width: 0.2rem;
   margin-right: 1rem;
-  padding-left: 0.2rem;
+  padding-left: 0.3rem;
   border-radius: var(--dl-radius-radius-round);
-  padding-right: 0.2rem;
+  padding-right: 0.3rem;
 }
 .item-page-container2 {
   width: 100%;
@@ -161,7 +161,6 @@
   object-fit: cover;
 }
 .item-page-container4 {
-  flex: 0 0 auto;
   width: 50%;
   height: auto;
   display: flex;
@@ -197,6 +196,14 @@
   text-transform: none;
   text-decoration: none;
 }
+.item-page-container5 {
+  flex: 0 0 auto;
+  width: auto;
+  height: 4rem;
+  display: flex;
+  align-items: flex-start;
+  justify-content: undefined;
+}
 .item-page-icon2 {
   fill: var(--dl-color-primary-100);
   width: 4rem;
@@ -207,11 +214,11 @@
   border-style: solid;
   border-width: 0.2rem;
   margin-right: 1rem;
-  padding-left: 0.2rem;
+  padding-left: 0.3rem;
   border-radius: var(--dl-radius-radius-round);
-  padding-right: 0.2rem;
+  padding-right: 0.3rem;
 }
-.item-page-container5 {
+.item-page-container6 {
   width: 100%;
   display: flex;
   align-items: flex-start;
@@ -256,11 +263,9 @@
     text-transform: none;
   }
   .item-page-text3 {
-    font-size: 3rem;
-    font-family: Open Sans;
-    font-weight: 600;
-    line-height: 1.55;
     text-transform: none;
-    text-decoration: none;
+  }
+  .item-page-text6 {
+    font-size: 1.5rem;
   }
 }
