--- a/src/main/resources/static/style/new-category-page.css
+++ b/src/main/resources/static/style/new-category-page.css
@@ -91,79 +91,44 @@
   }
 }
 
-.button-enter-container {
+.button-add-container {
   display: flex;
   position: relative;
 }
-.button-enter-button {
+.button-add-button {
   color: var(--dl-color-gray-background);
   border: none;
-  font-size: 3rem;
-  font-family: Open Sans;
-  font-weight: 800;
-  padding-top: var(--dl-space-space-halfunit);
-  padding-left: var(--dl-space-space-doubleunit);
-  border-radius: 10rem;
-  margin-bottom: 2rem;
-  padding-right: var(--dl-space-space-doubleunit);
-  padding-bottom: var(--dl-space-space-halfunit);
-  background-color: var(--dl-color-primary-100);
-}
-
-
-
-@media(max-width: 479px) {
-  .button-enter-root-class-name {
-    margin-top: 0rem;
-    margin-bottom: 0rem;
-  }
-  .button-enter-root-class-name1 {
-    margin-top: 0rem;
-    margin-bottom: 0rem;
-  }
-  .button-enter-root-class-name2 {
-    margin-top: 0rem;
-    margin-bottom: 0rem;
-  }
-}
-
-.button-register-container {
-  display: flex;
-  position: relative;
-}
-.button-register-button {
-  color: var(--dl-color-gray-background);
-  border: none;
-  font-size: 1.5em;
+  font-size: 2rem;
   font-family: Open Sans;
   font-weight: 600;
-  padding-top: var(--dl-space-space-halfunit);
-  padding-left: var(--dl-space-space-doubleunit);
-  border-radius: 50px;
-  margin-bottom: 2rem;
-  padding-right: var(--dl-space-space-doubleunit);
-  padding-bottom: var(--dl-space-space-halfunit);
-  text-transform: none;
-  text-decoration: none;
+  padding-top: 0.5rem;
+  padding-left: 3rem;
+  border-radius: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 0.5rem;
   background-color: var(--dl-color-primary-100);
 }
 
 
 
-@media(max-width: 479px) {
-  .button-register-root-class-name {
-    margin-top: 0rem;
-    margin-bottom: 0rem;
-  }
-  .button-register-root-class-name1 {
-    margin-top: 0rem;
-    margin-bottom: 0rem;
-  }
-  .button-register-root-class-name2 {
-    margin-top: 0rem;
-    margin-bottom: 0rem;
-  }
+.button-cancel-container {
+  display: flex;
+  position: relative;
 }
+.button-cancel-button {
+  color: var(--dl-color-gray-background);
+  border: none;
+  font-size: 2rem;
+  font-family: Open Sans;
+  font-weight: 600;
+  padding-top: 0.5rem;
+  padding-left: 3rem;
+  border-radius: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 0.5rem;
+  background-color: var(--dl-color-primary-100);
+}
+
 
 .footer-footer {
   width: 100%;
@@ -178,7 +143,7 @@
   font-family: Open Sans;
 }
 
-.authorization-page-container {
+.new-category-page-container {
   width: 100%;
   display: flex;
   overflow: auto;
@@ -186,49 +151,54 @@
   align-items: center;
   flex-direction: column;
 }
-.authorization-page-container1 {
+.new-category-page-container1 {
+  flex: 0 0 auto;
   width: 100%;
   height: auto;
   display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-.authorization-page-text {
-  font-size: 6em;
   margin-top: 2rem;
+  align-items: flex-start;
+  padding-left: 4rem;
+  margin-bottom: 2rem;
+  padding-right: 4rem;
+  justify-content: space-between;
+}
+.new-category-page-text {
+  font-size: 4em;
+  align-self: center;
   font-family: Rubik Dirt;
   line-height: 1em;
-  margin-bottom: 2rem;
 }
-.authorization-page-text1 {
-  color: var(--dl-color-gray-500);
-  text-align: center;
-  font-family: Open Sans;
-  margin-bottom: 2rem;
-}
-.authorization-page-container2 {
+.new-category-page-container2 {
+  width: 100%;
   display: flex;
-  position: relative;
+  align-items: center;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 1rem;
+  justify-content: center;
 }
-.authorization-page-input {
-  width: 20rem;
+.new-category-page-input {
+  width: 25rem;
+  font-size: 1.5rem;
   box-shadow: 5px 5px 10px 0px #d4d4d4;
   font-family: Open Sans;
-  padding-top: var(--dl-space-space-unit);
   border-radius: 1rem;
-  margin-bottom: 2rem;
-  padding-bottom: var(--dl-space-space-unit);
 }
-.authorization-page-container3 {
+.new-category-page-container3 {
+  width: 100%;
   display: flex;
-  position: relative;
+  align-items: center;
+  padding-top: 1rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 1rem;
+  justify-content: space-around;
 }
-.authorization-page-input1 {
-  width: 20rem;
-  box-shadow: 5px 5px 10px 0px #d4d4d4;
-  font-family: Open Sans;
-  padding-top: var(--dl-space-space-unit);
-  border-radius: 1rem;
-  margin-bottom: 2rem;
-  padding-bottom: var(--dl-space-space-unit);
+@media(max-width: 1200px) {
+  .new-category-page-text {
+    font-size: 4em;
+    font-family: Rubik Dirt;
+    line-height: 1em;
+  }
 }
