--- a/src/main/resources/templates/categories-page.html
+++ b/src/main/resources/templates/categories-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Item-page - Travel Agency</title>
-    <meta property="og:title" content="Item-page - Travel Agency" />
+    <title>Categories-page - Travel Agency</title>
+    <meta property="og:title" content="Categories-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -47,9 +47,9 @@
   </head>
   <body>
     <div>
-      <link href="/style/item-page.css" rel="stylesheet" />
+      <link href="/style/categories-page.css" rel="stylesheet" />
 
-      <div class="item-page-container">
+      <div class="categories-page-container">
         <header data-role="Header" class="header-header">
           <img
             alt="logo"
@@ -84,43 +84,71 @@
             </div>
           </div>
         </header>
-        <div class="item-page-container1">
-          <h1 class="item-page-text">Название Книги</h1>
-          <svg viewBox="0 0 1024 1024" class="item-page-icon">
+        <div class="categories-page-container1">
+          <h1 class="categories-page-text">Категории</h1>
+          <div class="button-add-container button-add-root-class-name">
+            <button type="button" class="button-add-button">
+              <span>
+                <span>Создать</span>
+                <br />
+              </span>
+            </button>
+          </div>
+        </div>
+        <div class="categories-page-container2">
+          <div class="categories-page-container3">
+            <label class="categories-page-text1">Название категории</label>
+            <svg viewBox="0 0 1024 1024" class="categories-page-icon">
+              <path
+                d="M662 170h148v86h-596v-86h148l44-42h212zM360 506l92 92-90 90 60 60 90-90 90 90 60-60-90-90 90-92-60-60-90 92-90-92zM256 810v-512h512v512q0 34-26 60t-60 26h-340q-34 0-60-26t-26-60z"
+              ></path>
+            </svg>
+          </div>
+          <div class="categories-page-container4">
+            <label class="categories-page-text2">Название категории</label>
+            <svg viewBox="0 0 1024 1024" class="categories-page-icon02">
+              <path
+                d="M662 170h148v86h-596v-86h148l44-42h212zM360 506l92 92-90 90 60 60 90-90 90 90 60-60-90-90 90-92-60-60-90 92-90-92zM256 810v-512h512v512q0 34-26 60t-60 26h-340q-34 0-60-26t-26-60z"
+              ></path>
+            </svg>
+          </div>
+          <div class="categories-page-container5">
+            <label class="categories-page-text3">Название категории</label>
+            <svg viewBox="0 0 1024 1024" class="categories-page-icon04">
+              <path
+                d="M662 170h148v86h-596v-86h148l44-42h212zM360 506l92 92-90 90 60 60 90-90 90 90 60-60-90-90 90-92-60-60-90 92-90-92zM256 810v-512h512v512q0 34-26 60t-60 26h-340q-34 0-60-26t-26-60z"
+              ></path>
+            </svg>
+          </div>
+          <div class="categories-page-container6">
+            <label class="categories-page-text4">Название категории</label>
+            <svg viewBox="0 0 1024 1024" class="categories-page-icon06">
+              <path
+                d="M662 170h148v86h-596v-86h148l44-42h212zM360 506l92 92-90 90 60 60 90-90 90 90 60-60-90-90 90-92-60-60-90 92-90-92zM256 810v-512h512v512q0 34-26 60t-60 26h-340q-34 0-60-26t-26-60z"
+              ></path>
+            </svg>
+          </div>
+          <div class="categories-page-container7">
+            <label class="categories-page-text5">Название категории</label>
+            <svg viewBox="0 0 1024 1024" class="categories-page-icon08">
+              <path
+                d="M662 170h148v86h-596v-86h148l44-42h212zM360 506l92 92-90 90 60 60 90-90 90 90 60-60-90-90 90-92-60-60-90 92-90-92zM256 810v-512h512v512q0 34-26 60t-60 26h-340q-34 0-60-26t-26-60z"
+              ></path>
+            </svg>
+          </div>
+        </div>
+        <div class="categories-page-container8">
+          <svg viewBox="0 0 1024 1024" class="categories-page-icon10">
             <path
-              d="M884 300l-78 78-160-160 78-78q12-12 30-12t30 12l100 100q12 12 12 30t-12 30zM128 736l472-472 160 160-472 472h-160v-160z"
+              d="M542.165 780.501l-225.835-225.835h494.336c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-494.336l225.835-225.835c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-298.667 298.667c-4.096 4.096-7.168 8.789-9.259 13.824-2.176 5.205-3.243 10.795-3.243 16.341 0 10.923 4.181 21.845 12.501 30.165l298.667 298.667c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z"
             ></path>
           </svg>
-        </div>
-        <div class="item-page-container2">
-          <div class="item-page-container3">
-            <img
-              alt="image"
-              src="https://play.teleporthq.io/static/svg/default-img.svg"
-              class="item-page-image"
-            />
-          </div>
-          <div class="item-page-container4">
-            <label class="item-page-text1">1000 ₽</label>
-            <label class="item-page-text2">в наличии</label>
-            <label class="item-page-text3">15 штук</label>
-            <div class="item-page-container5">
-              <svg viewBox="0 0 1024 1024" class="item-page-icon2">
-                <path
-                  d="M306 630q0 10 10 10h494v86h-512q-34 0-59-26t-25-60q0-20 10-40l58-106-154-324h-86v-84h140q40 84 80 170 10 18 46 95t56 119h300q150-272 164-300l74 42-164 298q-24 44-74 44h-318l-38 70zM726 768q34 0 59 26t25 60-25 59-59 25-60-25-26-59 26-60 60-26zM298 768q34 0 60 26t26 60-26 59-60 25-59-25-25-59 25-60 59-26zM470 384v-128h-128v-86h128v-128h84v128h128v86h-128v128h-84z"
-                ></path>
-              </svg>
-            </div>
-          </div>
-        </div>
-        <div class="item-page-container6">
-          <label class="item-page-text4">Категория</label>
-          <label class="item-page-text5">Автор</label>
-          <span class="item-page-text6">
-            Описание книги - это как хорошее произведение искуcства. Если
-            написать сочно, то любой книгу каждый же купит. А вот описывая
-            только скучные факты ничего хорошего не добьёшься.
-          </span>
+          <label class="categories-page-text6">страница №1</label>
+          <svg viewBox="0 0 1024 1024" class="categories-page-icon12">
+            <path
+              d="M481.835 243.499l225.835 225.835h-494.336c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667h494.336l-225.835 225.835c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l298.667-298.667c3.925-3.925 7.083-8.619 9.259-13.824 4.309-10.453 4.309-22.229 0-32.683-2.091-5.035-5.163-9.728-9.259-13.824l-298.667-298.667c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z"
+            ></path>
+          </svg>
         </div>
         <footer class="footer-footer">
           <span class="footer-text">
