--- a/src/main/resources/templates/new-category-page.html
+++ b/src/main/resources/templates/new-category-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Item-page - Travel Agency</title>
-    <meta property="og:title" content="Item-page - Travel Agency" />
+    <title>New-category-page - Travel Agency</title>
+    <meta property="og:title" content="New-category-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -47,9 +47,9 @@
   </head>
   <body>
     <div>
-      <link href="/style/item-page.css" rel="stylesheet" />
+      <link href="/style/new-category-page.css" rel="stylesheet" />
 
-      <div class="item-page-container">
+      <div class="new-category-page-container">
         <header data-role="Header" class="header-header">
           <img
             alt="logo"
@@ -84,43 +84,33 @@
             </div>
           </div>
         </header>
-        <div class="item-page-container1">
-          <h1 class="item-page-text">Название Книги</h1>
-          <svg viewBox="0 0 1024 1024" class="item-page-icon">
-            <path
-              d="M884 300l-78 78-160-160 78-78q12-12 30-12t30 12l100 100q12 12 12 30t-12 30zM128 736l472-472 160 160-472 472h-160v-160z"
-            ></path>
-          </svg>
+        <div class="new-category-page-container1">
+          <h1 class="new-category-page-text">Новая категория</h1>
         </div>
-        <div class="item-page-container2">
-          <div class="item-page-container3">
-            <img
-              alt="image"
-              src="https://play.teleporthq.io/static/svg/default-img.svg"
-              class="item-page-image"
-            />
-          </div>
-          <div class="item-page-container4">
-            <label class="item-page-text1">1000 ₽</label>
-            <label class="item-page-text2">в наличии</label>
-            <label class="item-page-text3">15 штук</label>
-            <div class="item-page-container5">
-              <svg viewBox="0 0 1024 1024" class="item-page-icon2">
-                <path
-                  d="M306 630q0 10 10 10h494v86h-512q-34 0-59-26t-25-60q0-20 10-40l58-106-154-324h-86v-84h140q40 84 80 170 10 18 46 95t56 119h300q150-272 164-300l74 42-164 298q-24 44-74 44h-318l-38 70zM726 768q34 0 59 26t25 60-25 59-59 25-60-25-26-59 26-60 60-26zM298 768q34 0 60 26t26 60-26 59-60 25-59-25-25-59 25-60 59-26zM470 384v-128h-128v-86h128v-128h84v128h128v86h-128v128h-84z"
-                ></path>
-              </svg>
-            </div>
-          </div>
+        <div class="new-category-page-container2">
+          <input
+            type="text"
+            placeholder="Название новой категории"
+            class="new-category-page-input input"
+          />
         </div>
-        <div class="item-page-container6">
-          <label class="item-page-text4">Категория</label>
-          <label class="item-page-text5">Автор</label>
-          <span class="item-page-text6">
-            Описание книги - это как хорошее произведение искуcства. Если
-            написать сочно, то любой книгу каждый же купит. А вот описывая
-            только скучные факты ничего хорошего не добьёшься.
-          </span>
+        <div class="new-category-page-container3">
+          <div class="button-add-container button-add-root-class-name">
+            <button type="button" class="button-add-button">
+              <span>
+                <span>Создать</span>
+                <br />
+              </span>
+            </button>
+          </div>
+          <div class="button-cancel-container button-cancel-root-class-name">
+            <button type="button" class="button-cancel-button">
+              <span>
+                <span>Отменить</span>
+                <br />
+              </span>
+            </button>
+          </div>
         </div>
         <footer class="footer-footer">
           <span class="footer-text">
