-ver 0.1 of Paypal payment integration  dependencies  backend - service, controller  config with IDs for OAuth -several methods of OrderService support -Backend support for paymentId field in database -temporary new order frontend page -temporary frontend html for payment debugging

--- a/src/main/resources/templates/new-order-page.html
+++ b/src/main/resources/templates/new-order-page.html
@@ -164,6 +164,10 @@
             <span class="new-order-page-text16">Итого:</span>
             <label class="new-order-page-text17">1000 ₽</label>
           </div>
+          <!--
+          Заглушка, нужен post запрос
+          -->
+          <a th:href="@{'/pay/1'}">
           <div class="new-order-page-container20">
             <div class="button-pay-container button-pay-root-class-name">
               <button type="button" class="button-pay-button">
@@ -174,6 +178,7 @@
               </button>
             </div>
           </div>
+          </a>
         </div>
         <div class="new-order-page-container21">
           <label class="new-order-page-text18">
