payment almost done

--- a/src/main/resources/templates/new-order-page.html
+++ b/src/main/resources/templates/new-order-page.html
@@ -121,6 +121,7 @@
               <br />
             </label>
             <div class="new-order-page-container22">
+              <input type="hidden" th:field="*{userId}" />
               <input type="hidden" th:field="*{orderNumber}" />
               <input type="hidden" th:field="*{orderStatus}" />
               <input type="hidden" th:field="*{orderPrice}" />
