--- a/src/main/resources/static/style/button-filter.css
+++ b/src/main/resources/static/style/button-filter.css
@@ -5,27 +5,16 @@
 .button-filter-button {
   color: var(--dl-color-gray-background);
   border: none;
-  font-size: 20px;
+  font-size: 2rem;
   font-family: Open Sans;
   font-weight: 600;
-  padding-top: var(--dl-space-space-halfunit);
-  padding-left: var(--dl-space-space-doubleunit);
-  border-radius: 50px;
-  padding-right: var(--dl-space-space-doubleunit);
-  padding-bottom: var(--dl-space-space-halfunit);
-  text-transform: none;
-  text-decoration: none;
+  margin-left: 0.5rem;
+  padding-top: 0.5rem;
+  margin-right: 0.5rem;
+  padding-left: 3rem;
+  border-radius: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 0.5rem;
   background-color: var(--dl-color-primary-100);
 }
-@media(max-width: 1600px) {
-  .button-filter-button {
-    color: var(--dl-color-gray-background);
-    font-size: 20px;
-    font-style: normal;
-    font-family: Open Sans;
-    font-weight: 500;
-    text-transform: none;
-    text-decoration: none;
-    background-color: var(--dl-color-primary-100);
-  }
-}
+
