--- a/src/main/resources/static/style/button-sort.css
+++ b/src/main/resources/static/style/button-sort.css
@@ -5,23 +5,16 @@
 .button-sort-button {
   color: var(--dl-color-gray-background);
   border: none;
-  font-size: 20px;
+  font-size: 2rem;
   font-family: Open Sans;
   font-weight: 600;
-  padding-top: var(--dl-space-space-halfunit);
-  padding-left: var(--dl-space-space-doubleunit);
-  border-radius: 50px;
-  padding-right: var(--dl-space-space-doubleunit);
-  padding-bottom: var(--dl-space-space-halfunit);
-  text-transform: none;
-  text-decoration: none;
+  margin-left: 0.5rem;
+  padding-top: 0.5rem;
+  margin-right: 0.5rem;
+  padding-left: 3rem;
+  border-radius: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 0.5rem;
   background-color: var(--dl-color-primary-100);
 }
 
-@media(max-width: 1600px) {
-  .button-sort-button {
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-  }
-}
